-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.2, 6.5.4, 6.5.5, 6.6.3, 6.7.0
-
App built with MacOS (M1) 12.6 + Xcode 14.2 + CMake 3.24; and also MacOS (M1) 13.4 + Xcode 14.3.1 + CMake 3.24
-
-
527cc4c4e (dev), f8be7c0cd (6.8), 300984907 (dev), 39e40a2a9 (6.8), 69961ce2b (6.8.0), 9bca6fdd9 (dev), ed8e0e97a (6.8)
-
Multimedia wk 17-18, Multimedia wk 19-20, Multimedia wk 21-22, Multimedia wk 23-24
How to reproduce:
- Build the [audio output example](https://doc.qt.io/qt-6/qtmultimedia-audiooutput-example.html) for iOS
- Deploy to an iOS 16 iPad (I've not tried it on iPhone)
- Disconnect from Xcode
- Run the app. You should hear the tone.
- Let the iPad sleep fully so that the audio stops or manually click the power button and wait a few seconds.
- Unlock the iPad. Around 50-70% of the time, the audio will fail to resume.
Notes:
- This bug does not happen for iOS 15 or below.
- I have tested this more fully in my own app. At step 6, QAudioSink::state remains 0 (QAudio::ActiveState) and QAudioSink::error remains 0 (QAudio::NoError) so the app seems unaware that the audio stream has failed.
- Step 5 must involve the device fully going to sleep. It is not sufficient to cause the app to be suspended, say, by pressing the Home button or switching to a different app.
- relates to
-
QTBUG-123192 EXC_BREAKPOINT in QDarwinAudioSink::renderCallback while stopping
-
- Closed
-
-
QTBUG-125603 Audio playback not resuming after device locked/unlocked
-
- Closed
-