Darwin audio sink: increase core audio ring buffer size (on iOS)

When a device (iPhone/iPad) is locked, audio render callback
stops with an error with our current buffer size and then
never restarts (on device unlocked), never reading again from
our ring buffer and never freeing any memory (and thus we don't
read anymore from QIODevice and cannot write into the ring buffer).

Fixes: QTBUG-114674
Change-Id: I79ed04d9c7dbb1fd6d3b7b3450177e27493c7909
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 527cc4c4ed4f39de568d39fcdd9406944f7e2ddd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>